--- a/import.html
+++ b/import.html
@@ -982,9 +982,14 @@
           <div class="container-fullwidth justify-content-center">
 
             <div class="row">
-              <div class="col-6 text-center text-muted">เลขที่นำสินค้าเข้า : ทำอัตโนมัติเมื่อบันทึก
-              </div>
               <div id="date" class="col-6 text-center text-muted"></div>
+              <div class="col-6 text-center text-muted dropdown">นำของเข้า :
+                <div class="btn-group">
+                  <select id="branch" type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              
+                  </select>
+                </div>
+              </div>
             </div> <br>
             <div class="row">
               <div class="col-6 text-center text-muted">ชื่อผู้ผลิต :
@@ -992,11 +997,8 @@
                     <input id="sup" type="text" class="form-control text-center" placeholder="พิมพ์ชื่อผู้ผลิตที่นี่">
                 </div>
               </div>
-              <div class="col-6 text-center text-muted dropdown">นำของเข้า :
-                <div class="btn-group">
-                  <select id="branch" type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-
-                  </select>
+              <div class="col-6 text-center text-muted">ผู้ทำรายการ :
+                <div id="user" class="btn-group col-4 text-center text-muted">
                 </div>
               </div>
             </div>
