--- a/import.html
+++ b/import.html
@@ -922,6 +922,7 @@
 
       function logout(){
         localStorage.user_id = "";
+        window.location = "login.html";
       }
     </script>
 </head>
