--- a/manage_cus.html
+++ b/manage_cus.html
@@ -645,6 +645,7 @@
 
         function logout(){
             localStorage.user_id = "";
+            window.location = "login.html";
         }
     </script>
 </head>
