--- a/import.html
+++ b/import.html
@@ -950,7 +950,7 @@
               <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse justify-content-md-center" id="navbarCollapse">
-              <h3 id="nav-title">เพิ่มสินค้า</h3>
+              <h3 id="nav-title">สินค้าเข้า</h3>
             </div>
           </nav>
           <!-- End Navbar -->
