--- a/import.html
+++ b/import.html
@@ -321,7 +321,11 @@
       var c_unit = 0;
       function add_unit() {
         if($("#barcode").val() == "" || $("#name").val() == "" || $("#amount").val() == "" || $("#price").val() == "" || $("#input-unit-price").val() == ""){
-          alert("กรุณากรอกข้อมูลให้ครบถ้วน");
+          $.alert({
+            icon: 'fa fa-warning',
+            title: 'เตือน',
+            content: 'กรุณากรอกข้อมูลให้ครบถ้วน',
+          });
           return 0;
         }
 
@@ -336,7 +340,11 @@
             // Exist Check
             for(var i = 1; i <= c_unit; i++){
               if(number == $("#show-unit-"+i).text() || number == $("#set-unit-"+i).val()){
-                alert("ได้ตั้งค่าราคาของจำนวน " + number + " ไว้แล้ว");
+                $.alert({
+                  icon: 'fa fa-warning',
+                  title: 'เตือน',
+                  content: "ได้ตั้งค่าราคาของจำนวน " + number + " ไว้แล้ว",
+                });
                 exist = true;
               }
             }
@@ -369,9 +377,17 @@
           for(var i = 1; i <= c_unit; i++){
             if(number == $("#show-unit-"+i).text() || number == $("#set-unit-"+i).val()){
               if(number == ""){
-                alert("กรุณากรอกจำนวน");
+                $.alert({
+                  icon: 'fa fa-warning',
+                  title: 'เตือน',
+                  content: "กุรณากรอกจำนวน",
+                });
               }else{
-                alert("ได้ตั้งค่าราคาของจำนวน " + number + " ไว้แล้ว");
+                $.alert({
+                  icon: 'fa fa-warning',
+                  title: 'เตือน',
+                  content: "ได้ตั้งค่าราคาของจำนวน " + number + " ไว้แล้ว",
+                });
               }
               exist = true;
             }
@@ -450,7 +466,11 @@
 
         for(var i = 1; i <= c_unit; i++){
           if(unit == $("#show-unit-"+i).text()){
-            alert("ได้ตั้งค่าราคาของจำนวน " + unit + " ไว้แล้ว หากต้องการแก้ไข กดดับเบิ้ลคลิก");
+            $.alert({
+              icon: 'fa fa-warning',
+              title: 'เตือน',
+              content: "ได้ตั้งค่าราคาของจำนวน " + unit + " ไว้แล้ว",
+            });
             return 0;
           }
         }
@@ -468,14 +488,22 @@
       var c_cus = 0;
       function add_cus() {
           if($("#input-cus").val() == "" || $("#input-cus-price").val() == ""){
-            alert("กรุณากรอกข้อมูลให้ครบถ้วน");
+            $.alert({
+              icon: 'fa fa-warning',
+              title: 'เตือน',
+              content: "กรุณากรอกข้อมูลให้ครบถ้วน",
+            });
             return 0;
           }
 
         var exist = false;
         for (var i = 1; i <= c_cus; i++) {
           if ($("#input-cus").val() == $("#show-cus-" + i).text() || $("#input-cus").val() == $("#set-cus-" + i).val()) {
-            alert("ได้ตั้งค่าราคาของลูกค้า " + $("#input-cus").val() + " ไว้แล้ว");
+            $.alert({
+              icon: 'fa fa-warning',
+              title: 'เตือน',
+              content: "ได้ตั้งค่าราคาของลูกค้า " + $("#input-cus").val() + " ไว้แล้ว",
+            });
             exist = true;
           }
         }
@@ -562,7 +590,11 @@
 
         for(var i = 1; i <= c_cus; i++){
           if(cus == $("#show-cus-"+i).text()){
-            alert("ได้ตั้งค่าราคาของลูกค้า " + cus + " ไว้แล้ว หากต้องการแก้ไข กดดับเบิ้ลคลิก");
+            $.alert({
+              icon: 'fa fa-warning',
+              title: 'เตือน',
+              content: "ได้ตั้งค่าราคาของลูกค้า " + cus + " ไว้แล้ว",
+            });
             return 0;
           }
         }
@@ -590,7 +622,11 @@
         {
           return 0;
         }else if($("#input-unit").val() != "" || $("#input-unit-price").val() != "" || $("#input-cus").val() != "" || $("#input-cus-price").val() != "" || checked == true){
-          alert("กรุณากดเพิ่มเพื่อกำหนดราคาก่อนเพิ่มสินค้าถัดไป");
+          $.alert({
+            icon: 'fa fa-warning',
+            title: 'เตือน',
+            content: "กรุณากดเพิ่มเพื่อกำหนดราคาก่อนเพิ่มสินค้าถัดไป",
+          });
         }else{
           saveAndShow();
         }
