--- a/sale.html
+++ b/sale.html
@@ -980,6 +980,7 @@
 
     function logout(){
       localStorage.user_id = "";
+      window.location = "login.html";
     }
     </script>
 </body>
