--- a/import.html
+++ b/import.html
@@ -1004,9 +1004,9 @@
           
           <!-- Header -->
           <div class="row">
-            <div class="col-1"></div>
-            <div id="date" class="col-5 text-center text-muted"></div>
             <div class="col-2"></div>
+            <div id="date" class="col-2 text-left text-muted"></div>
+            <div class="col-4"></div>
             <div class="col-3 text-left text-muted">ผู้ทำรายการ :
               <div id="user" class="btn-group col-4 text-center text-muted">
               </div>
@@ -1014,14 +1014,14 @@
           </div>
           <br>
           <div class="row">
-            <div class="col-1"></div>
-            <div class="col-5 text-center text-muted">จากผู้ผลิต :
+            <div class="col-2"></div>
+            <div class="col-5 text-left text-muted">จากผู้ผลิต :
               <div class="btn-group col-4 text-center text-muted">
                 <input id="sup" type="text" class="form-control text-center" placeholder="พิมพ์ชื่อผู้ผลิตที่นี่" data-index="1">
               </div>
             </div>
-            <div class="col-2"></div>
-            <div class="col-3 text-left text-muted dropdown">นำของเข้า :
+            <div class="col-1"></div>
+            <div class="col-4 text-left text-muted dropdown">นำของเข้า :
               <div class="btn-group">
                 <select id="branch" type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           
