--- a/sale.html
+++ b/sale.html
@@ -108,9 +108,9 @@
             
             <!-- 4 4 4 4 4 4 4 4 -->
             <div class="row">
-              <div class="col-1"></div>
-              <div id="date" class="col-5 text-center text-muted"></div>
               <div class="col-2"></div>
+              <div id="date" class="col-2 text-left text-muted"></div>
+              <div class="col-4"></div>
               <div class="col-3 text-left text-muted">ผู้ทำรายการ :
                 <div id="user" class="btn-group col-4 text-center text-muted">
                 </div>
@@ -118,14 +118,14 @@
             </div>
             <br>
             <div class="row">
-              <div class="col-1"></div>
-              <div class="col-5 text-center text-muted">ชื่อลูกค้า :
+              <div class="col-2"></div>
+              <div class="col-5 text-left text-muted">ชื่อลูกค้า :
                 <div class="btn-group text-center text-muted">
                   <input id="cus" type="text" class="form-control text-center" placeholder="พิมพ์ชื่อลูกค้าที่นี่" data-index="1">
                 </div>
               </div>
-              <div class="col-2"></div>
-              <div class="col-3 text-left text-muted dropdown">ของออกจาก :
+              <div class="col-1"></div>
+              <div class="col-4 text-left text-muted dropdown">ของออกจาก :
                 <div class="btn-group">
                   <select id="branch" type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               
