--- a/import.html
+++ b/import.html
@@ -95,7 +95,11 @@
               onChooseEvent: function() {
                 for(var b = 0; b < count; b++){
                   if($("#name").val() == $("#name-"+b).val()){
-                    alert("มีการเพิ่มสินค้า " + $("#name").val() + "กรุณาแก้ไขที่จำนวนของสินค้าที่ได้เพิ่มแล้ว");
+                    $.alert({
+                      icon: 'fa fa-warning',
+                      title: 'เตือน',
+                      content: "มีการเพิ่มสินค้า " + $("#name").val() + "กรุณาแก้ไขที่จำนวนของสินค้าที่ได้เพิ่มแล้ว",
+                    });
                     $("#name").val("");
                     $('#barcode').val("");
                     $('#price').val("");
@@ -943,7 +947,11 @@
               url:"http://150.95.26.163:8080/gitmew/php/stock_in.php",
               data: dataString,                                     
               success: function(data){
-                  alert(data);
+                  $.alert({
+                  icon: 'fa fa-badge-check',
+                  title: 'สำเร็จ',
+                  content: "บันทึกสำเร็จ!",
+                });
                   if(data == "success"){                
                     /*$('#show_list_add').empty();
                     obj = [];                
@@ -963,6 +971,10 @@
           
         }else{
           alert("กรุณาเลือกผู้ผลิตก่อนบันทึก");
+          $.alert({
+            icon: 'fa fa-warning',
+            title: 'เตือน',
+            content: "กรุณาเลือกผู้ผลิตก่อนบันทึก!",
         }
       }
 
