--- a/login.html
+++ b/login.html
@@ -15,6 +15,10 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     
+    <!-- Super cool dialog-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-confirm/3.3.0/jquery-confirm.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-confirm/3.3.0/jquery-confirm.min.js"></script>
+
     <!-- Sidbar -->
     <link href="css/simple-sidebar.css" rel="stylesheet">
     <!-- Font -->
@@ -87,7 +91,11 @@
                         'pass' : pass},                           
                     success: function(data){                   
                     if(data == "fail"){
-                        alert("ชื่อหรือรหัสผ่านไม่ถูกต้อง");
+                        $.alert({
+                            icon: 'fa fa-warning',
+                            title: 'เตือน',
+                            content: "ชื่อหรือรหัสผ่านไม่ถูกต้อง",
+                        });
                     }else{
                         localStorage.name = name
                         localStorage.user_id = data;
