ท่ดๆ เมื่อกี้ลบ login

--- a/import.html
+++ b/import.html
@@ -51,11 +51,11 @@
       var sup_id = 0;
       var prod_id,img;
       $(document).ready(function(){   
-        /*if(!localStorage.user_id){
+        if(!localStorage.user_id){
           alert("กรุณาเข้าสู่ระบบก่อน");
           window.location = "login.html";
         }
-        detail();*/
+        detail();
 
         setTimeout(function() {$("#sup").focus();}, 100);
 
