--- a/sale.html
+++ b/sale.html
@@ -449,10 +449,10 @@
     var img;
     var prod_id;
     $(document).ready(function(){  
-      /*if(!localStorage.user_id){
+      if(!localStorage.user_id){
         alert("กรุณาเข้าสู่ระบบก่อน");
         window.location = "login.html";
-      } */   
+      } 
         //Scroll
         $("#show_list_add").scroll(function() {
           console.log("Scroll");
